# baxter_kinematics

./: .gitignore  CMakeLists.txt  README.md  baxter_kinematics.files  package.xml  setup.py
include/baxter_kinematics/: lib_movement.hpp
launch/: move_group_mimick_node.launch  run_services.launch  test_trajectories_batching.launch
launch/params/: planner_params.yaml
msg/: ExecuteNewTrajectory.msg  TrajectoryTopic.msg
src/: parameters.yaml
src/lib/: eef_values.hpp  lib_movement.cpp
src/services/: align_with_object_service.cpp  execute_trajectory_service.cpp  execute_trajectory_topic.cpp  get_gripper_state_service.cpp  get_real_eef_pose_service.cpp  get_sim_eef_pose_service.cpp  gripper_action_service.cpp  move_to_position_service.cpp  restart_robot_service.cpp  rotate_to_angle_service.cpp
src/tests/: action_server.py  loop.py  test_batching_trajectories.cpp  test_loop.py  test_planner.cpp  test_service.cpp  test_service_execute_trajectory.cpp  test_service_move_to_position.cpp  test_service_move_to_position_up_down.cpp  test_service_restart_robot.cpp  test_service_up_down.cpp
srv/: AlignWithObject.srv  GetEefPose.srv  GripperAction.srv  GripperState.srv  MoveToPos.srv  RotateToAngle.srv  Trajectory.srv
